tests/invalid/duplicate_symbols.ri
<<<<<<< HEAD
fn main() {
=======
fn main() void {
>>>>>>> fd5cbb707991f17d1cc05e277c0ef9c401dd652c
    let x = 1;
    let x = 1; // FAIL

    let y = 2;
    {
        let y = 5; // disallow variable shadowing
    }
}

<<<<<<< HEAD
fn other(a: i32) {
    let a = 1;
}

fn other(a: i32) { // FAIL
=======
fn other(a: i32) void {
    let a = 1;
}

fn other(a: i32) void { // FAIL
>>>>>>> fd5cbb707991f17d1cc05e277c0ef9c401dd652c
    let a = 1;
}

class RuntimeError : Error { }
class RuntimeError : Error { } // FAIL

struct Gota { }
struct Gota { } // FAIL

<<<<<<< HEAD
=======
mod module {
    struct App { }
    struct App { } // FAIL
}

>>>>>>> fd5cbb707991f17d1cc05e277c0ef9c401dd652c
enum State {
    Idle,
    Idle // FAIL
}
<<<<<<< HEAD
=======

// OK, extend `module` mod
mod module {
    struct Game {
        art: bool;
        art: bool; // FAIL
    }
}
>>>>>>> fd5cbb707991f17d1cc05e277c0ef9c401dd652c
